# sNjE

./: CMakeLists.txt  main.cpp  main.h
include/: Camera.h  LocalException.hpp  Shader.h  snjLightSourceModel.h  snjMesh.h  snjModel.h  snjVertex.h
shaders/: lamp.frag  lamp.vert  std_object.frag  std_object.vert  test.frag  test.vert  test_shader.frag  test_shader.vert
src/: Camera.cpp  Shader.cpp  snjLightSourceModel.cpp  snjLightsHandler.cpp  snjMesh.cpp  snjModel.cpp  snjVertex.cpp
tests/: mesh_test.cpp  model_test.cpp  test.cpp
textures/models/: cube.blend  cube.dae  cube.mtl  ps_cube.mtl
textures/models/debug_light_source/: cube.blend  cube.blend1  cube.mtl
textures/models/tampon/: tampon.blend  tampon.blend1  tampon.mtl
textures/models/test/: PTS_Burlak.blend  PTS_Burlak.fbx  PTS_Burlak.mtl  something.blend  something.blend1  something.mtl
